fix footer alignment

--- a/apps/delivery-web/src/components/Footer/Footer.module.css
+++ b/apps/delivery-web/src/components/Footer/Footer.module.css
@@ -62,12 +62,28 @@
   border-width: 0.7px;
 }
 
+.bottomContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+}
+
 .socialContainer {
+  max-width: 107px;
   display: flex;
   align-items: center;
   gap: 24px;
   margin-top: 12px;
   justify-content: flex-start;
+}
+
+.copyrightContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .copyright {
